[gd_scene load_steps=5 format=3 uid="uid://cgat4nqhbwmri"]

[ext_resource type="PackedScene" uid="uid://bdqoqccy5qcu0" path="res://ui/custom_nodes/inventory_slot.tscn" id="1_ji2fb"]
[ext_resource type="Texture2D" uid="uid://oq8xfy218npr" path="res://textures/panel_blue.png" id="2_n01nj"]
[ext_resource type="Texture2D" uid="uid://crmgk25mpm1oj" path="res://textures/panel_brown.png" id="3_lnt13"]
[ext_resource type="Script" path="res://ui/custom_nodes/hot_bar_slot.gd" id="3_qnf0s"]

[node name="HotBarSlot" groups=["HotBarSlots"] instance=ExtResource("1_ji2fb")]
texture = ExtResource("2_n01nj")
script = ExtResource("3_qnf0s")

[node name="NumTextureRect" type="TextureRect" parent="." index="1"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 1
offset_left = -12.0
offset_top = -12.0
offset_right = 20.0
offset_bottom = 20.0
texture = ExtResource("3_lnt13")
expand_mode = 1

[node name="NumLabel" type="Label" parent="NumTextureRect" index="0"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 22
text = "0"
horizontal_alignment = 1
vertical_alignment = 1
